<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/PosterStyle"
        android:src="@drawable/img_poster" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/NameStyle"
                android:paddingLeft="@dimen/titlePadding"
                android:paddingRight="@dimen/titlePadding"
                android:paddingTop="@dimen/titlePadding"
                android:text="@string/title"
                android:textColor="@color/titleMain"
                android:textSize="@dimen/textLarge" />

            <TextView
                style="@style/DescrStyle"
                android:padding="@dimen/descrPadding"
                android:text="@string/description"
                android:textColor="@color/textMain"
                android:textSize="@dimen/textMedium" />

            <TextView
                style="@style/DescrStyle"
                android:paddingBottom="@dimen/descrPadding"
                android:paddingLeft="@dimen/descrPadding"
                android:paddingRight="@dimen/descrPadding"
                android:text="@string/description_cont"
                android:textColor="@color/textMain"
                android:textSize="@dimen/textMedium" />

            <TextView
                style="@style/DescrStyle"
                android:paddingBottom="@dimen/descrPadding"
                android:paddingLeft="@dimen/descrPadding"
                android:paddingRight="@dimen/descrPadding"
                android:text="@string/description_fin"
                android:textColor="@color/textMain"
                android:textSize="@dimen/textMedium" />

            <View
                style="@style/SeparatorStyle"
                android:layout_marginBottom="@dimen/separatorMargin"
                android:background="@color/separator" />

            <Button
                style="@style/ButtonStyle"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/drawablePadding"
                android:onClick="openBrowser"
                android:paddingLeft="@dimen/iconPadding"
                android:tag="@string/address_url"
                android:text="@string/address"
                android:textAllCaps="@string/buttonCaps"
                android:textColor="@color/buttonsText"
                android:textSize="@dimen/textSmall" />

            <View
                style="@style/SeparatorStyle"
                android:layout_marginBottom="@dimen/separatorMargin"
                android:layout_marginTop="@dimen/separatorMargin"
                android:background="@color/separator" />

            <Button
                style="@style/ButtonStyle"
                android:drawableLeft="@drawable/ic_website"
                android:drawablePadding="@dimen/drawablePadding"
                android:onClick="openBrowser"
                android:paddingLeft="@dimen/iconPadding"
                android:tag="@string/website_url"
                android:text="@string/website_url"
                android:textAllCaps="@string/buttonCaps"
                android:textColor="@color/buttonsText"
                android:textSize="@dimen/textSmall" />

            <View
                style="@style/SeparatorStyle"
                android:layout_marginBottom="@dimen/separatorMargin"
                android:layout_marginTop="@dimen/separatorMargin"
                android:background="@color/separator" />

            <Button
                style="@style/ButtonStyle"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/drawablePadding"
                android:onClick="dialPhone"
                android:paddingLeft="@dimen/iconPadding"
                android:text="@string/phone"
                android:textAllCaps="@string/buttonCaps"
                android:textColor="@color/buttonsText"
                android:textSize="@dimen/textSmall" />

            <View
                style="@style/SeparatorStyle"
                android:layout_marginBottom="@dimen/separatorMargin"
                android:layout_marginTop="@dimen/separatorMargin"
                android:background="@color/separator" />

            <Button
                style="@style/ButtonStyle"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/drawablePadding"
                android:onClick="writeEmail"
                android:paddingLeft="@dimen/iconPadding"
                android:text="@string/email"
                android:textAllCaps="@string/buttonCaps"
                android:textColor="@color/buttonsText"
                android:textSize="@dimen/textSmall" />

            <View
                style="@style/SeparatorStyle"
                android:layout_marginBottom="@dimen/separatorMargin"
                android:layout_marginTop="@dimen/separatorMargin"
                android:background="@color/separator" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>